--- a/_posts/2018-03-06-Bastion.md
+++ b/_posts/2018-03-06-Bastion.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Bastion SSH: tips & tricks
+title: Bastion SSH tips & tricks
 date: 2018-02-28 16:33:33
 tags: ssh bastion security ssh-agent forwarding
 ---
