--- a/_posts/2018-03-06-Bastion.md
+++ b/_posts/2018-03-06-Bastion.md
@@ -7,8 +7,16 @@ tags: ssh bastion security ssh-agent forwarding
 
 # Qu'est-ce qu'un Bastion SSH ?
 En tant qu'administrateur système, rencontrer une bastion SSH est une chôse assez courante.
+
 Le bastion SSH est un hôte ayant une adresse IP publique afin d'être joignable sur internet mais aussi une adresse IP privée afin d'être relié à, par exemple, un réseau d'entreprise.
+
 Afin de se connecter à l'une des machines sur le réseau d'entreprise, on effectuera un *rebond* sur le bastion SSH.
+
+
+# Pourquoi ?
+- Manque d'adresses IPs publiques à allouer
+- Restreindre l'accès à certaines machines à une adresse IP source spécifique: celle du bastion
+- Ne pas relier à internet certaines machines.
 
 
 
