--- a/_posts/2018-03-06-Bastion.md
+++ b/_posts/2018-03-06-Bastion.md
@@ -2,6 +2,7 @@
 layout: post
 title: Bastion SSH tips & tricks
 date: 2018-02-28 16:33:33
+author: thms
 tags: ssh bastion security ssh-agent forwarding
 ---
 
