--- a/_posts/2018-03-06-Bastion.md
+++ b/_posts/2018-03-06-Bastion.md
@@ -17,7 +17,7 @@ Afin de se connecter à l'une des machines sur le réseau d'entreprise, on effec
 # Pourquoi ?
 - Manque d'adresses IPs publiques à allouer
 - Restreindre l'accès à certaines machines à une adresse IP source spécifique: celle du bastion
-- Accéder au réseau privé sans configurer de NAT ou VPN.
+- Infrastructure virtualisée ou les VMs ont des IPs privées et seul le loadbalancer possède une IP publique.
 
 # Astuces
 Lors de la connnexion à un hote derrière le bastion SSH,  on doit d'abord se connecter sur le bastion, puis se connecter sur l'hote final.
@@ -26,13 +26,12 @@ Lors de la connnexion à un hote derrière le bastion SSH,  on doit d'abord se c
 
 thms@home> ssh thms@bastion
 thms@bastion> ssh thms@10.0.0.1
-thms@10.0.0.1
 
 {% endhighlight %}
 
 Afin de gagner du temps, il est beaucoup plus pratique d'effectuer #2 directement.
 
-Pour se faire, on va éditer le fichier *.ssh/config*:
+Pour se faire, on va éditer le fichier `.ssh/config`:
 
 {% highlight bash %}
 Host bastion
@@ -45,10 +44,10 @@ Host 10.0.*.*
  User root
 {% endhighlight %}
 
-Le premier block permet de se connecter au bastion grace à la clé, en tant qu'utilisateur "thms"
+Le premier block permet de se connecter au bastion grace à la clé `id_rsa`, en tant qu'utilisateur `thms`
 
-Le second block permet de dire au client SSH "pour chaque IP qui *match* 10.0.*.*", on se connecte via bastion, avec la clé renseignée dans IdentityFile
+Le second block permet de dire au client SSH "pour chaque IP qui *match* 10.0.*.*", on se connecte via `bastion`, avec la clé renseignée dans IdentityFile
 
-Ainsi, lorsque j'écris ssh bastion, mon client ssh se connecte en tant que thms à bastion avec ma clé.
+Ainsi, lorsque j'écris `ssh bastion`, mon client ssh se connecte en tant que thms à bastion avec ma clé.
 
-De même, lorsque j'écris ssh 10.0.0.1, mon client SSH se connecte à bastion et initie la connexion depuis bastion, en tant qu'utilisateur root, vers 10.0.0.1
+De même, lorsque j'écris `ssh 10.0.0.1`, mon client SSH se connecte à bastion et initie la connexion depuis bastion, en tant qu'utilisateur root, vers 10.0.0.1
