--- a/_posts/2018-03-06-Bastion.md
+++ b/_posts/2018-03-06-Bastion.md
@@ -51,3 +51,5 @@ Le second block permet de dire au client SSH "pour chaque IP qui *match* 10.0.*.
 Ainsi, lorsque j'écris `ssh bastion`, mon client ssh se connecte en tant que thms à bastion avec ma clé.
 
 De même, lorsque j'écris `ssh 10.0.0.1`, mon client SSH se connecte à bastion et initie la connexion depuis bastion, en tant qu'utilisateur root, vers 10.0.0.1
+
+Inline `code` has `back-ticks around` it.
