--- a/_posts/2018-03-06-Bastion.md
+++ b/_posts/2018-03-06-Bastion.md
@@ -9,17 +9,16 @@ tags: ssh bastion security ssh-agent forwarding
 # Qu'est-ce qu'un Bastion SSH ?
 En tant qu'administrateur système, rencontrer une bastion SSH est une chôse assez courante.
 
-Le bastion SSH est un hôte ayant une adresse IP publique afin d'être joignable sur internet mais aussi une adresse IP privée afin d'être relié à, par exemple, un réseau d'entreprise.
+Le bastion SSH est un hôte relié à plusieurs réseau indépendants.
 
-Afin de se connecter à l'une des machines sur le réseau d'entreprise, on effectuera un *rebond* sur le bastion SSH.
-
+Afin de se connecter à l'une des machines sur l'un de ces réseaux, on effectuera un *rebond* sur le bastion SSH.
 
 # Pourquoi ?
 - Manque d'adresses IPs publiques à allouer
-- Restreindre l'accès à certaines machines à une adresse IP source spécifique: celle du bastion
-- Infrastructure virtualisée ou les VMs ont des IPs privées et seul le loadbalancer possède une IP publique.
+- Restreindre l'accès à certaines machines à une adresse IP source spécifique: celle du bastion.
+- Infrastructure virtualisée ou les VMs ont des IPs privées.
 
-# Astuces
+# Explication
 Lors de la connnexion à un hote derrière le bastion SSH,  on doit d'abord se connecter sur le bastion, puis se connecter sur l'hote final.
 
 {% highlight bash %}
@@ -29,7 +28,10 @@ thms@bastion> ssh thms@10.0.0.1
 
 {% endhighlight %}
 
-Afin de gagner du temps, il est beaucoup plus pratique d'effectuer #2 directement.
+
+# Mise en place
+
+Afin de gagner du temps, il est beaucoup plus pratique d'effectuer `ssh thms@10.0.0.1` directement.
 
 Pour se faire, on va éditer le fichier `.ssh/config`:
 
